feat: integrate gRPC in WEB with Swagger UI and WebSocket streaming via gRPC-Gateway
